--- a/qrcode/build.gradle
+++ b/qrcode/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.github.dcendents.android-maven'
 android {
     compileSdkVersion rootProject.ext.android.compileSdkVersion
 
@@ -20,6 +21,6 @@ android {
 
 dependencies {
     api fileTree(include: ['*.jar', '*.aar'], dir: 'libs')
-    implementation 'com.google.zxing:core:3.4.0'
+    implementation 'com.google.zxing:core:3.4.1'
 }
 
