--- a/qrcode/build.gradle
+++ b/qrcode/build.gradle
@@ -21,6 +21,6 @@ android {
 
 dependencies {
     api fileTree(include: ['*.jar', '*.aar'], dir: 'libs')
-    implementation 'com.google.zxing:core:3.4.1'
+    api 'com.google.zxing:core:3.4.1'
 }
 
